<resources>
    <string name="app_name">android_concert_app</string>
    <string name="remember"><u>Remember</u></string>
    <string name="register"><u>Register</u></string>

    <string name="login"><u>Login</u></string>
    <string name="conditions"><u>conditions</u></string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="by_signing_up_you_accept_our">By signing up, you accept our</string>
    <string name="have_an_account">Have an account?</string>

    <string name="all">All</string>
    <string name="electro">Electro</string>
    <string name="heavy_metal">Heavy Metal</string>
</resources>