<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login_register"
        tools:context=".LoginRegisterActivity">

        <LinearLayout
            android:id="@+id/linear_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Liber"
                android:textColor="@color/white"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Concerts"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_logo"
            android:layout_margin="20dp"
            android:background="@drawable/linear_transparent_bg_dark"
            android:orientation="horizontal"
            android:padding="2dp">

            <!-- TextView для надписи "Register" -->
            <TextView
                android:id="@+id/register_text"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="18sp" /> <!-- Цвет текста -->

            <!-- TextView для надписи "Login" -->
            <TextView
                android:id="@+id/login_text"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/switch_selected_dark"
                android:gravity="center"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="18sp" /> <!-- Цвет неактивного текста -->

            <!-- Скрытый SwitchCompat -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:thumb="@android:color/transparent"
                android:visibility="gone"
                app:track="@android:color/transparent" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/linear_fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_register"
            android:layout_margin="20dp"></FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/linear_fragments"
            android:layout_margin="20dp"
            android:background="@drawable/button_sign_in"
            android:text="Sign In"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_url_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_dont_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/text_url_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>